# observe-claude-code

./: .gitignore  .mcp.json  Makefile  PROJECT_STATE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: deny-prod-deploy.sh
collector/: config.yaml
compose/: docker-compose.yml
demo/: run-session.sh  session.md
demo/prod-api/: server.py
demo/replay/: README.md  capture-session.sh  replay.py  session-sample.jsonl
docs/: abstract.md  design.md  gotchas-fastmcp.md  gotchas-otlp-integration.md  gotchas-weaver.md  ownership.md  run-of-show.md  spec.md  versions.md
env/: claude-code.env
grafana/dashboards/: observe-claude-code.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: datasources.yaml
handoff/: 1-start-here.md  2-abstract.md  3-how-it-works.md  5-your-part-datadog.md  6-try-it-yourself.md  README.md  drive-manifest.txt  reference-versions-and-gotchas.md
loki/: loki-config.yaml
prometheus/: prometheus.yml
scripts/: bootstrap-docker.sh  publish-handoff.sh
tests/: conftest.py  test_collector.py  test_compose.py  test_dashboard.py  test_env.py  test_grafana.py  test_hardening.py  test_jaeger.py  test_loki.py  test_mcp_config.py  test_mcp_server.py  test_prometheus.py  test_replay.py  test_roundtrip.py  test_weaver.py
weaver/: README.md  feeder.yaml  live-check.sh  sample-telemetry.jsonl
weaver/registry/: claude_code.yaml  manifest.yaml
